# tatteau-data-ingestion

./: Cargo.toml
src/: data_fetcher.rs  data_parser.rs  data_persister.rs  geographical_location.rs  main.rs
